@@ -13,7 +13,9 @@ devscripts (2.10.62) UNRELEASED; urgency=low
       known madison URL.
     + Detect an existing '?' in a URL and use '&' to append more cgi
       parameters.  Thanks to Raphael Geissert.
-  * chdist: Add "use strict" and update for compliance.
+  * chdist:
+    + Add "use strict" and update for compliance.
+    + Use Dpkg::Version to perform version comparisons.
 
  -- James Vega <jamessan@debian.org>  Sat, 02 Jan 2010 22:30:26 -0500
 
